--- a/KingofSlacker/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/KingofSlacker/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1540,7 +1540,7 @@ DataTableEditor.LastCompileMethod=Unknown
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.DA_DialogueDefinitions.Dialogues\" \"Object.DA_DialogueDefinitions.Dialogues.Dialogues[0]\" "
+Object="\"Object\" "
 DataTable="\"Object\" "
 SpringArmComponent="\"Object\" "
 SceneComponent="\"Object\" "
@@ -1656,7 +1656,7 @@ BP_KS_PlayerController_C.WorldPartition=True
 BP_KS_PlayerController_C.Replication=True
 BP_KS_PlayerController_C.Actor=True
 BP_KS_PlayerController_C.HLOD=True
-BP_KS_PlayerController_C.AKS =True
+BP_KS_PlayerController_C.AKS=True
 BP_KS_PlayerController_C.Controller=True
 BP_KS_PlayerController_C.Physics=True
 BP_KS_PlayerController_C.Events=True
@@ -1683,7 +1683,7 @@ K2Node_VariableGet.Events=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-DebuggerAttached=True
+DebuggerAttached=False
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1691,14 +1691,9 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
-OpenAssetsAtExit=/Game/A_KOS/Blueprints/Inventory/Data/DT_ItemType.DT_ItemType
-OpenAssetsAtExit=/Game/A_KOS/Blueprints/Inventory/BP_ItemActorBase.BP_ItemActorBase
-OpenAssetsAtExit=/Game/A_KOS/Character/Player/BP_TestCharacter.BP_TestCharacter
-OpenAssetsAtExit=/Game/A_KOS/Gameplay/BP_KS_PlayerController.BP_KS_PlayerController
-OpenAssetsAtExit=/Game/A_KOS/Blueprints/Dialogue/Data/DA_Dialogues.DA_Dialogues
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/A_KOS/Character/Player
+ContentBrowserTab1.SelectedPaths=/Game/A_KOS/Levels
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.IsLocked=False
@@ -1726,26 +1721,29 @@ ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.ZoomScale=0
 ContentBrowserTab1.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserTab1.ColumnViewColumnsManuallyChangedOnce=False
+ContentBrowserTab1.JumpMRU=/All/Game/A_KOS/Levels
+ContentBrowserTab1.JumpMRU=/All/Game/A_KOS
+ContentBrowserTab1.JumpMRU=/All/Game
+ContentBrowserTab1.JumpMRU=/All/Classes_Game
+ContentBrowserTab1.JumpMRU=/All/Classes_Game/KingofSlacker
+ContentBrowserTab1.JumpMRU=/All/Game/A_KOS/Blueprints
+ContentBrowserTab1.JumpMRU=/All/Game/A_KOS/Asset
+ContentBrowserTab1.JumpMRU=
+ContentBrowserTab1.JumpMRU=/All/Game/A_KOS/Assest
 ContentBrowserTab1.JumpMRU=/All/Game/A_KOS/Character/Player
 ContentBrowserTab1.JumpMRU=/All/Game/A_KOS/Character
 ContentBrowserTab1.JumpMRU=/All/Game/A_KOS/Blueprints/Dialogue/Data
 ContentBrowserTab1.JumpMRU=/All/Game/A_KOS/Blueprints/Dialogue
-ContentBrowserTab1.JumpMRU=/All/Game/A_KOS/Blueprints
 ContentBrowserTab1.JumpMRU=/All/Classes_Game/KingofSlacker/Public/Dialogue
 ContentBrowserTab1.JumpMRU=/All/Game/A_KOS/Blueprints/Inventory
 ContentBrowserTab1.JumpMRU=/All/Game/A_KOS/Gameplay
 ContentBrowserTab1.JumpMRU=/All/Classes_Game/KingofSlacker/Public/Character
-ContentBrowserTab1.JumpMRU=/All/Game/A_KOS/Levels
-ContentBrowserTab1.JumpMRU=/All/Game/A_KOS
 ContentBrowserTab1.JumpMRU=/All/Classes_Game/KingofSlacker/Public/Inventory
 ContentBrowserTab1.JumpMRU=/All/Classes_Game/KingofSlacker/Public/Gameplay
 ContentBrowserTab1.JumpMRU=/All/Game/A_KOS/Blueprints/Inventory/Data
 ContentBrowserTab1.JumpMRU=/All/Game/Characters
 ContentBrowserTab1.JumpMRU=/All/Classes_Game/KingofSlacker/Public
 ContentBrowserTab1.JumpMRU=/All/EngineData
-ContentBrowserTab1.JumpMRU=/All/Classes_Game/KingofSlacker
-ContentBrowserTab1.JumpMRU=/All/Classes_Game
-ContentBrowserTab1.JumpMRU=/All/Game/A_KOS/Assest
 AssetPropertyPicker.ThumbnailSizeGrid=2
 AssetPropertyPicker.ThumbnailSizeList=2
 AssetPropertyPicker.ThumbnailSizeCustom=2
